Fix Layout Issues

--- a/src/main/resources/static/css/site.less
+++ b/src/main/resources/static/css/site.less
@@ -164,3 +164,11 @@ body{
     padding-bottom: 60px;
   }
 }
+
+//Fix issue that report are not aligned with header and footer
+.report-content {
+  > div > div {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
